// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid MML 2 1`] = `
<div
  className="mml-container"
/>
`;

exports[`mml name and simple text field 1`] = `
<div
  className="mml-container"
>
  <p>
    hi
  </p>
</div>
`;

exports[`only supported attributes are allowed 1`] = `
<div
  className="mml-container"
>
  <p>
    hi
  </p>
</div>
`;

exports[`simple carousel 1`] = `
<div
  className="mml-container"
>
  <div
    className="mml-carousel"
  >
    <div
      className="slick-slider slick-initialized"
    >
      
      <div
        className="slick-list"
      >
        <div
          className="slick-track"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          style={
            Object {
              "WebkitTransform": "translate3d(0px, 0px, 0px)",
              "WebkitTransition": "",
              "msTransform": "translateX(0px)",
              "opacity": 1,
              "transform": "translate3d(0px, 0px, 0px)",
              "transition": "",
            }
          }
        >
          <div
            aria-hidden={false}
            className="slick-slide slick-active slick-current"
            data-index={0}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="mml-carousel-item"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <p>
                  a
                </p>
              </div>
            </div>
          </div>
          <div
            aria-hidden={false}
            className="slick-slide slick-active"
            data-index={1}
            onClick={[Function]}
            style={
              Object {
                "outline": "none",
                "width": 0,
              }
            }
            tabIndex="-1"
          >
            <div>
              <div
                className="mml-carousel-item"
                style={
                  Object {
                    "display": "inline-block",
                    "width": "100%",
                  }
                }
                tabIndex={-1}
              >
                <p>
                  b
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`simple input 1`] = `
<div
  className="mml-container"
>
  <form
    onSubmit={[Function]}
  >
    <input
      name="name"
      onChange={[Function]}
      value="John"
    />
  </form>
</div>
`;
